--- a/packages/sdlc-cve/package.json
+++ b/packages/sdlc-cve/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "@or-change/sdlc-basic-credential",
-  "version": "1.0.1",
-  "private": true,
+  "name": "@or-change/sdlc-cve",
+  "version": "0.0.1",
   "description": "> TODO: description",
   "author": "leoword <leowordpassword123>",
   "homepage": "https://github.com/or-change/sdlc#readme",
   "license": "ISC",
-  "main": "index.js",
-  "publishConfig": {
-    "access": "public"
+  "main": "lib/sdlc-cve.js",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/or-change/sdlc.git"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1"
+  },
   "bugs": {
     "url": "https://github.com/or-change/sdlc/issues"
   },
   "dependencies": {
     "@or-change/duck": "^0.5.0",
-    "@or-change/sdlc": "^0.0.1"
+    "@or-change/duck-datahub": "^0.2.0"
   },
-  "devDependencies": {
-    "mocha": "^6.2.1"
+  "publishConfig": {
+    "access": "public"
   }
 }
